:sparkles: Added option to copy changelog to clipboard